--- a/package.json
+++ b/package.json
@@ -20,10 +20,19 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/camera": "^5.15.1",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.15.1",
+    "@ionic-native/file-path": "^5.15.1",
+    "@ionic-native/ionic-webview": "^5.15.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-filepath": "^1.5.6",
+    "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -55,5 +64,14 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-camera": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-file": {},
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-filepath": {}
+    }
+  }
 }
